--- a/flowmetaball.vcxproj
+++ b/flowmetaball.vcxproj
@@ -123,12 +123,21 @@
     <ClCompile Include="Blob.cpp" />
     <ClCompile Include="flowmetaball.cpp" />
     <ClCompile Include="gg.cpp" />
+    <ClCompile Include="lib\imgui.cpp" />
+    <ClCompile Include="lib\imgui_draw.cpp" />
+    <ClCompile Include="lib\imgui_impl_glfw.cpp" />
+    <ClCompile Include="lib\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="lib\imgui_widgets.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Blob.h" />
     <ClInclude Include="gg.h" />
     <ClInclude Include="GgApplication.h" />
+    <ClInclude Include="include\imconfig.h" />
+    <ClInclude Include="include\imgui.h" />
+    <ClInclude Include="include\imgui_impl_glfw.h" />
+    <ClInclude Include="include\imgui_impl_opengl3.h" />
     <ClInclude Include="Particle.h" />
   </ItemGroup>
   <ItemGroup>
